--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="main__main-log">вход</div>
 		<div class="main__log"></div>
 		<form action="#">
-			<input required placeholder="Почта*" name="mail" class="main__input-mail" type="mail">
+			<input required placeholder="Почта*" name="email" class="main__input-mail" type="email">
 			<input required name="" placeholder="Пароль*" class="main__input-password" type="password">
 
 			<div class="memory">
@@ -84,7 +84,9 @@
 				<span class="footer__text">+38-067-982-81-22</span>
 				<span class="footer__text">uzbeklarnet@gmail.com</span>
 			</div>
+		</div>
 	</footer>
+
 </body>
 
 </html>
