--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="main__log"></div>
 		<form action="#">
 			<input required placeholder="Почта*" name="email" class="main__input-mail" type="email">
-			<input required name="" placeholder="Пароль*" class="main__input-password" type="password">
+			<input required name="password" placeholder="Пароль*" class="main__input-password" type="password">
 
 			<div class="memory">
 				<input id="check-memory" type="checkbox" class="memory__input">
